# cgcnn

./: example_prediction.py  pyproject.toml
cgcnn/: __init__.py  predictor.py
